--- a/smart-campus/src/app/app.component.html
+++ b/smart-campus/src/app/app.component.html
@@ -1,1 +1,17 @@
-<!-- Pagina aqui -->
+<div class="d-flex flex-column justify-content-center align-items-center">
+    <div class="header d-flex flex-row justify-content-between align-items-center w-100">
+        <div>
+            <img src="../assets/ifsc_logo.png" alt="IFSC">
+        </div>
+        <div class="search">
+            <input type="text" placeholder="O que você está procurando?">
+        </div>
+        <div class="menu">
+            <ul class="d-flex flex-row justify-content-between align-items-center">
+                <li>Salas</li>
+                <li>Eventos</li>
+                <li>Incidentes</li>
+            </ul>
+        </div>
+    </div>
+</div>
