connect to database and search for data

--- a/smart-campus/src/app/app.component.html
+++ b/smart-campus/src/app/app.component.html
@@ -14,4 +14,11 @@
             </ul>
         </div>
     </div>
+
+    <!-- Salas -->
+    <div>
+        <div *ngFor="let sala of salas">
+            {{sala.room_name}}
+        </div>
+    </div>
 </div>
