--- a/smart-campus/src/styles.scss
+++ b/smart-campus/src/styles.scss
@@ -1,1 +1,5 @@
-@import url('~bootstrap/dist/css/bootstrap.min.css')
+@import url('~bootstrap/dist/css/bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css?family=Kulim+Park:400,600,700&display=swap');
+html,body{
+    font-family: 'Kulim Park';
+}
