--- a/smart-campus/src/app/app.component.html
+++ b/smart-campus/src/app/app.component.html
@@ -8,17 +8,58 @@
         </div>
         <div class="menu">
             <ul class="d-flex flex-row justify-content-between align-items-center">
-                <li>Salas</li>
-                <li>Eventos</li>
-                <li>Incidentes</li>
+                <li class="d-flex flex-column justify-content-end align-items-center">
+                    Salas
+                    <span></span>
+                </li>
+                <li class="d-flex flex-column justify-content-end align-items-center">
+                    Eventos
+                    <span></span>
+                </li>
+                <li class="d-flex flex-column justify-content-end align-items-center">
+                    Incidentes
+                    <span></span>
+                </li>
             </ul>
         </div>
     </div>
 
     <!-- Salas -->
-    <div>
-        <div *ngFor="let sala of salas">
-            {{sala.room_name}}
+    <div class="schedule w-100">
+        <!-- 
+            Filtros
+            * Por curso
+            * Por sala
+            * Data inicial
+            * Data final
+        -->
+        <!-- <div>
+            <select name="curso" id="curso">
+                <option *ngFor="let sala of salas" value="sala.curso">{{sala.curso}}</option>
+            </select> 
+        </div> -->
+        <!-- Indice -->
+        <div class="d-flex flex-row justify-content-center align-items-center">
+            <div>
+
+            </div>
+            <p>{{today}}</p>
+        </div>
+        <div class="indice d-flex flex-row align-items-center"> 
+            <div *ngFor="let i of hours" class="hour d-flex flex-column justify-content-center align-items-center">
+                {{i.hour}}
+            </div>
+        </div>
+        <!-- Evento -->
+        <div class="events d-flex flex-row align-items-center justify-content-start" *ngFor="let course of courses">
+            <!-- Icone -->
+            <div class="iconOuter d-flex flex-row justify-content-center align-items-center">
+                <div class="icon d-flex align-items-center">{{course.name | slice:0:30}} - {{course.period}}</div>
+            </div>
+            <!-- linha do tempo -->
+            <div class="timeline d-flex align-items-center">
+                <div class="event d-flex align-items-center" *ngFor="let event of course.schedule" [style.margin-left.vw]="event.start" [style.width.vw]="event.end - event.start">{{event.name | slice:0:40}} - {{event.create_by}}</div>
+            </div>
         </div>
     </div>
 </div>
